Changes with Apache 1.3.13

  *) Initial support added for mod_proxy under MPE/iX.
     [Mark Bixby <mark_bixby@hp.com>]

  *) Refined UID/GID management and permissions on MPE/iX to deal 
     with some limitations. [Mark Bixby <mark_bixby@hp.com>]

  *) Updated the MPE DSO code to be compatible with an OS patch that
     fixed an earlier DSO problem,  #include tweakage required for 
     using apxs to build modules without access to the full source 
     tree, and other minor MPE tweaks.  
     [Mark Bixby <mark_bixby@hp.com>]

  *) Tighten up the syntax checking of Host: headers to fix a
     security bug in some mass virtual hosting configurations
     that can allow a remote attacker to retrieve some files
     on the system that should be inaccessible. [Tony Finch]

  *) Add support for /, //, //servername and //server/sharename 
     parsing of <Directory > blocks under Win32 and OS2.
     [Tim Costello, William Rowe, Brian Harvard]

  *) Expand dbmmanage to allow -d -m -s -p options for Crypt, MD5,
     SHA1 and plaintext password encodings.  Make feature tests a
     bit more flexible.  [William Rowe]

  *) Fix a security problem that affects some configurations of
     mod_rewrite. If the result of a RewriteRule is a filename that
     contains expansion specifiers, especially regexp backreferences
     $0..$9 and %0..%9, then it may have been possible for an attacker
     to access any file on the web server. [Tony Finch]

  *) Add mod_auth_dbm (sdbm flavor) binary build for Win32.
     [William Rowe]

  *) Overhaul of dbmmanage to allow a groups arg (as in Apache 1.2)
     as well as a comment arg to the add, adduser and update cmds.
     update allows the user to clear or preserve pw/groups/comment.
     Fixed a bug in dbmmanage that prevented the check option from 
     parsing a password followed by :group... text.  Corrected the
     seed calcualation for Win32 systems, and added -lsdbm support.
     [William Rowe]
