@@ -102,8 +102,26 @@ typedef struct info_cfg_lines {
     struct info_cfg_lines *next;
 } info_cfg_lines;
 
+typedef struct {                /* shamelessly lifted from http_config.c */
+    char *fname;
+} info_fnames;
+
+typedef struct {
+    info_cfg_lines *clines;
+    char *fname;
+} info_clines;
+
 module MODULE_VAR_EXPORT info_module;
 extern module API_VAR_EXPORT *top_module;
+
+/* shamelessly lifted from http_config.c */
+static int fname_alphasort(const void *fn1, const void *fn2)
+{
+    const info_fnames *f1 = fn1;
+    const info_fnames *f2 = fn2;
+
+    return strcmp(f1->fname,f2->fname);
+}
 
 static void *create_info_config(pool *p, server_rec *s)
 {
@@ -153,10 +171,10 @@ static char *mod_info_html_cmd_string(const char *string, char *buf, size_t buf_
     }
     /* oops, overflowed... don't overwrite */
     if (t > end_buf) {
-	*end_buf = '\0';
+        *end_buf = '\0';
     }
     else {
-	*t = '\0';
+        *t = '\0';
     }
     return (buf);
 }
@@ -172,8 +190,8 @@ static info_cfg_lines *mod_info_load_config(pool *p, const char *filename,
     fp = ap_pcfg_openfile(p, filename);
     if (!fp) {
         ap_log_rerror(APLOG_MARK, APLOG_WARNING, r, 
-		    "mod_info: couldn't open config file %s",
-		    filename);
+                    "mod_info: couldn't open config file %s",
+                    filename);
         return NULL;
     }
     ret = NULL;
@@ -190,14 +208,14 @@ static info_cfg_lines *mod_info_load_config(pool *p, const char *filename,
         if (prev) {
             prev->next = new;
         }
-	t = s;
-	new->cmd = ap_getword_conf(p, &t);
-	if (*t) {
-	    new->line = ap_pstrdup(p, t);
-	}
-	else {
-	    new->line = NULL;
-	}
+        t = s;
+        new->cmd = ap_getword_conf(p, &t);
+        if (*t) {
+            new->line = ap_pstrdup(p, t);
+        }
+        else {
+            new->line = NULL;
+        }
         prev = new;
     }
     ap_cfg_closefile(fp);
@@ -324,7 +342,7 @@ static void mod_info_module_cmds(request_rec *r, info_cfg_lines *cfg,
                         ap_rputs(mod_info_html_cmd_string(li->line, buf, sizeof(buf)), r);
                         ap_rputs("</i>", r);
                     }
-		    ap_rputs("</tt>", r);
+                    ap_rputs("</tt>", r);
                 }
             }
             else
@@ -354,6 +372,53 @@ static char *find_more_info(server_rec *s, const char *module_name)
     return 0;
 }
 
+static void mod_info_dirwalk(pool *p, const char *fname,
+                             request_rec *r, array_header *carray)
+{
+    info_clines *cnew = NULL;
+    info_cfg_lines *mod_info_cfg_tmp = NULL;
+
+    if (!ap_is_rdirectory(fname)) {
+        mod_info_cfg_tmp = mod_info_load_config(p, fname, r);
+        cnew = (info_clines *) ap_push_array(carray);
+        cnew->fname = ap_pstrdup(p, fname);
+        cnew->clines = mod_info_cfg_tmp;
+    } else {
+        DIR *dirp;
+        struct DIR_TYPE *dir_entry;
+        int current;
+        array_header *candidates = NULL;
+        info_fnames *fnew;
+
+        dirp = ap_popendir(p, fname);
+        if (dirp == NULL) {
+            ap_log_rerror(APLOG_MARK, APLOG_WARNING, r, 
+                    "mod_info: couldn't open config directory %s",
+                    fname);
+            return;
+        }
+        candidates = ap_make_array(p, 1, sizeof(info_fnames));
+        while ((dir_entry = readdir(dirp)) != NULL) {
+            /* strip out '.' and '..' */
+            if (strcmp(dir_entry->d_name, ".") &&
+                strcmp(dir_entry->d_name, "..")) {
+                fnew = (info_fnames *) ap_push_array(candidates);
+                fnew->fname = ap_make_full_path(p, fname, dir_entry->d_name);
+            }
+        }
+        ap_pclosedir(p, dirp);
+        if (candidates->nelts != 0) {
+            qsort((void *) candidates->elts, candidates->nelts,
+              sizeof(info_fnames), fname_alphasort);
+            for (current = 0; current < candidates->nelts; ++current) {
+                fnew = &((info_fnames *) candidates->elts)[current];
+                mod_info_dirwalk(p, fnew->fname, r, carray);
+            }
+        }
+    }
+    return;
+}
+
 static int display_info(request_rec *r)
 {
     module *modp = NULL;
@@ -363,13 +428,14 @@ static int display_info(request_rec *r)
     const handler_rec *hand = NULL;
     server_rec *serv = r->server;
     int comma = 0;
-    info_cfg_lines *mod_info_cfg_httpd = NULL;
-    info_cfg_lines *mod_info_cfg_srm = NULL;
-    info_cfg_lines *mod_info_cfg_access = NULL;
+    array_header *allconfigs = NULL;
+    info_clines *cnew = NULL;
+    int current;
+    char *relpath;
 
     r->allowed |= (1 << M_GET);
     if (r->method_number != M_GET)
-	return DECLINED;
+        return DECLINED;
 
     r->content_type = "text/html";
     ap_send_http_header(r);
@@ -379,15 +445,16 @@ static int display_info(request_rec *r)
     ap_hard_timeout("send server info", r);
 
     ap_rputs(DOCTYPE_HTML_3_2
-	     "<html><head><title>Server Information</title></head>\n", r);
+             "<html><head><title>Server Information</title></head>\n", r);
     ap_rputs("<body><h1 align=center>Apache Server Information</h1>\n", r);
     if (!r->args || strcasecmp(r->args, "list")) {
+        allconfigs = ap_make_array(r->pool, 1, sizeof(info_clines));
         cfname = ap_server_root_relative(r->pool, ap_server_confname);
-        mod_info_cfg_httpd = mod_info_load_config(r->pool, cfname, r);
+        mod_info_dirwalk(r->pool, cfname, r, allconfigs);
         cfname = ap_server_root_relative(r->pool, serv->srm_confname);
-        mod_info_cfg_srm = mod_info_load_config(r->pool, cfname, r);
+        mod_info_dirwalk(r->pool, cfname, r, allconfigs);
         cfname = ap_server_root_relative(r->pool, serv->access_confname);
-        mod_info_cfg_access = mod_info_load_config(r->pool, cfname, r);
+        mod_info_dirwalk(r->pool, cfname, r, allconfigs);
         if (!r->args) {
             ap_rputs("<tt><a href=\"#server\">Server Settings</a>, ", r);
             for (modp = top_module; modp; modp = modp->next) {
@@ -590,8 +657,8 @@ static int display_info(request_rec *r)
                     while (cmd) {
                         if (cmd->name) {
                             ap_rprintf(r, "<dd><tt>%s - <i>",
-				    mod_info_html_cmd_string(cmd->name,
-					buf, sizeof(buf)));
+                                    mod_info_html_cmd_string(cmd->name,
+                                        buf, sizeof(buf)));
                             if (cmd->errmsg) {
                                 ap_rputs(cmd->errmsg, r);
                             }
@@ -603,12 +670,16 @@ static int display_info(request_rec *r)
                         cmd++;
                     }
                     ap_rputs("<dt><strong>Current Configuration:</strong>\n", r);
-                    mod_info_module_cmds(r, mod_info_cfg_httpd, modp->cmds,
-                                         "httpd.conf");
-                    mod_info_module_cmds(r, mod_info_cfg_srm, modp->cmds,
-                                         "srm.conf");
-                    mod_info_module_cmds(r, mod_info_cfg_access, modp->cmds,
-                                         "access.conf");
+                    for (current = 0; current < allconfigs->nelts; ++current) {
+                        cnew = &((info_clines *) allconfigs->elts)[current];
+                        /* get relative pathname with some safeguards */
+			relpath = ap_stripprefix(cnew->fname,ap_server_root);
+			if (*relpath != '\0' && relpath != cnew->fname &&
+                            *relpath == '/')
+                            relpath++;
+                        mod_info_module_cmds(r, cnew->clines, modp->cmds,
+                                             relpath);
+                    }
                 }
                 else {
                     ap_rputs("<tt> none</tt>\n", r);
